<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/_nss_color_white">

    <include
        android:id="@+id/topBar"
        layout="@layout/_nss_top_bar_navigation" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtTelecomTitle"
                style="@style/_nss_style_text_card_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nss_telecom_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtPhoneNumber"
                style="@style/_nss_style_text_card_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nss_telecom_phone_numbet"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtTelecomTitle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtMoney"
                style="@style/_nss_style_text_card_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nss_telecom_money"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtPhoneNumber" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtFee"
                style="@style/_nss_style_text_card_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nss_telecom_fee"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtMoney" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtAmount"
                style="@style/_nss_style_text_card_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nss_telecom_amount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtFee" />

            <Button
                android:id="@+id/btnPayment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_nss_base_margin"
                android:text="Thanh Toán"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtAmount" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>